# dieChemiker3

./: Dockerfile  compose.yml  custom.css  pyproject.toml
__marimo__/session/: Test1.py.json  Test2.py.json  Test3.py.json
notebooks/: PC_II_VolAds.py  Test1.py  Test2.py  Test3.py
notebooks/__marimo__/session/: HCl_IR.py.json  PC_II_VolAds.py.json  Test1.py.json  Test2.py.json  Test3.py.json  adsorption.py.json
notebooks/layouts/: PC_II_VolAds.grid.json  PC_II_VolAds.slides.json
scripts/: thumbnails.sh
to_be_added/: HCl_IR.py  adsorption.py
