[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo[recommended]>=0.23.6",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyzmq>=27.1.0",
    "scipy>=1.17.1",
    "tabulate>=0.10.0",
]
[tool.marimo.display]
custom_css = ["custom.css"]
